<resources>
    <string name="app_name">TP7</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="judul">judul</string>
    <string name="deskripsi">deskripsi</string>
    <string name="time">time</string>
    <string name="judulcaps">Judul</string>
    <string name="deskripsicaps">Deskripsi</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="no_data_available">No data available</string>
</resources>