<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="12dp"
    android:layout_marginVertical="12dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@drawable/bg_card">

        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/judul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judul"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="14dp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/deskripsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>